Corrigido Bug no update de endereço e telefone